@@ -1,14 +1,17 @@
 package logbook.internal.proxy;
 
-import jakarta.servlet.http.HttpServlet;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
 import logbook.internal.LoggerHolder;
 import logbook.internal.ThreadManager;
 import logbook.plugin.PluginServices;
 import logbook.proxy.ContentListenerSpi;
 import logbook.proxy.RequestMetaData;
 import logbook.proxy.ResponseMetaData;
+import org.eclipse.jetty.http.HttpHeader;
+import org.eclipse.jetty.http.HttpMethod;
+import org.eclipse.jetty.server.Handler;
+import org.eclipse.jetty.server.Request;
+import org.eclipse.jetty.server.Response;
+import org.eclipse.jetty.util.Callback;
 
 import java.io.*;
 import java.net.URLDecoder;
@@ -18,14 +21,10 @@ import java.util.stream.Collectors;
 import java.util.zip.GZIPInputStream;
 
 /**
- * 外部からのHTTP POSTリクエストを受け付けてListenerを呼び出すサーブレット
+ * 外部からのHTTP POSTリクエストを受け付けてListenerを呼び出すハンドラ
  * mitmproxyのようなSSL/TLS証明書をサポートするプロキシがフックしたデータをこちらに送信することを想定している
  */
-public final class PassiveModeServlet extends HttpServlet {
-    @Serial
-    private static final long serialVersionUID = -7501576705342327540L;
-
-    public static final String PATH_SPEC = "/pasv/*";
+public class PassiveModeHandler extends Handler.Abstract {
     private static final String PATH_PREFIX = "/pasv/";
 
     private static final String REQUEST_METHOD_HEADER = "X-Pasv-Request-Method";
@@ -35,19 +34,27 @@ public final class PassiveModeServlet extends HttpServlet {
     /**
      * リスナー
      */
-    private transient List<ContentListenerSpi> listeners = null;
+    private List<ContentListenerSpi> listeners = null;
 
     @Override
-    protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws IOException {
-        RequestParsingResult result = new RequestParser().parse(req);
-
-        if (this.invoke(result.getRequestMetaDataWrapper(), result.getResponseMetaDataWrapper())) {
-            resp.setStatus(200);
-            resp.setContentType("text/plain; charset=UTF-8");
-            resp.getWriter().println("OK");
-        } else {
-            resp.sendError(500);
+    public boolean handle(Request request, Response response, Callback callback) throws Exception {
+        if (!shouldHandle(request)) {
+            return false;
         }
+
+        RequestParsingResult result = new RequestParser().parse(request);
+        if (this.invoke(result.getRequestMetaDataWrapper(), result.getResponseMetaDataWrapper())) {
+            response.setStatus(200);
+            callback.succeeded();
+        } else {
+            response.setStatus(500);
+            callback.failed(new Exception("Internal Server Error"));
+        }
+        return true;
+    }
+
+    private static boolean shouldHandle(Request req) {
+        return HttpMethod.POST.is(req.getMethod()) && req.getHttpURI().getPath().startsWith(PATH_PREFIX);
     }
 
     private boolean invoke(RequestMetaDataWrapper req, ResponseMetaDataWrapper res) {
@@ -61,7 +68,7 @@ public final class PassiveModeServlet extends HttpServlet {
                         try {
                             listener.accept(req, res);
                         } catch (Exception e) {
-                            LoggerHolder.get().warn("パッシブモード サーブレットで例外が発生", e);
+                            LoggerHolder.get().warn("PassiveModeHandlerで例外が発生", e);
                         }
                     };
                     ThreadManager.getExecutorService().submit(task);
@@ -69,34 +76,28 @@ public final class PassiveModeServlet extends HttpServlet {
             }
             return true;
         } catch (Exception e) {
-            LoggerHolder.get().warn("パッシブモード サーブレットで例外が発生 req=" + req.getRequestURI(), e);
+            LoggerHolder.get().warn("PassiveModeHandlerで例外が発生 req=" + req.getRequestURI(), e);
             return false;
         }
     }
 
-    static final class RequestParser {
+    private static final class RequestParser {
         RequestParser() {
         }
 
-        RequestParsingResult parse(HttpServletRequest req) throws IOException, RuntimeException {
+        RequestParsingResult parse(Request req) throws IOException, RuntimeException {
             return new RequestParsingResult(this.createRequestMetaDataWrapper(req), this.createResponseMetaDataWrapper(req));
         }
 
-        private RequestMetaDataWrapper createRequestMetaDataWrapper(HttpServletRequest req) throws RuntimeException {
+        private RequestMetaDataWrapper createRequestMetaDataWrapper(Request req) throws RuntimeException {
             RequestMetaDataWrapper wrapper = new RequestMetaDataWrapper();
 
-            wrapper.setContentType(req.getHeader(REQUEST_CONTENT_TYPE_HEADER));
-            wrapper.setMethod(req.getHeader(REQUEST_METHOD_HEADER));
-            wrapper.setQueryString(req.getQueryString());
+            wrapper.setContentType(req.getHeaders().get(REQUEST_CONTENT_TYPE_HEADER));
+            wrapper.setMethod(req.getHeaders().get(REQUEST_METHOD_HEADER));
+            wrapper.setRequestURI(req.getHttpURI().getPath().substring(PATH_PREFIX.length() - 1));
+            wrapper.setQueryString(req.getHttpURI().getQuery());
 
-            String requestUri = req.getRequestURI();
-            if (requestUri.startsWith(PATH_PREFIX)) {
-                wrapper.setRequestURI(requestUri.substring(PATH_PREFIX.length()-1));
-            } else {
-                throw new RuntimeException("Unexpected request URI: " + requestUri);
-            }
-
-            String b64body = req.getHeader(REQUEST_BODY_HEADER);
+            String b64body = req.getHeaders().get(REQUEST_BODY_HEADER);
             if (b64body != null) {
                 byte[] body = Base64.getDecoder().decode(b64body);
                 wrapper.set(new ByteArrayInputStream(body));
@@ -109,40 +110,34 @@ public final class PassiveModeServlet extends HttpServlet {
             return wrapper;
         }
 
-        private ResponseMetaDataWrapper createResponseMetaDataWrapper(HttpServletRequest req) throws IOException {
+        private ResponseMetaDataWrapper createResponseMetaDataWrapper(Request req) throws IOException {
             ResponseMetaDataWrapper wrapper = new ResponseMetaDataWrapper();
 
             // Listenerで見てないから200固定にしておく
             wrapper.setStatus(200);
             // Request BodyのContent-Typeそのまま
-            wrapper.setContentType(req.getContentType());
+            wrapper.setContentType(req.getHeaders().get(HttpHeader.CONTENT_TYPE));
 
             // Request Bodyのデータを取得
             // inputをそのままsetすると、"java.io.IOException: mark/reset not supported" が発生するので
             // 一度bytes[]に読み込んでからsetする
-            InputStream input = req.getInputStream();
-            ByteArrayOutputStream baos = new ByteArrayOutputStream();
-            byte[] buffer = new byte[1024];
-            int len;
-            while ((len = input.read(buffer)) > -1) {
-                baos.write(buffer, 0, len);
+            try (InputStream input = Request.asInputStream(req)) {
+                ByteArrayOutputStream baos = new ByteArrayOutputStream();
+                byte[] buffer = new byte[1024];
+                int len;
+                while ((len = input.read(buffer)) > -1) {
+                    baos.write(buffer, 0, len);
+                }
+                baos.flush();
+                // Content-Encoding: gzipの場合はset()内で自動的に展開される
+                wrapper.set(new ByteArrayInputStream(baos.toByteArray()));
             }
-            baos.flush();
-            // Content-Encoding: gzipの場合はset()内で自動的に展開される
-            wrapper.set(new ByteArrayInputStream(baos.toByteArray()));
 
             return wrapper;
         }
     }
 
-    static final class RequestParsingResult {
-        private final RequestMetaDataWrapper req;
-        private final ResponseMetaDataWrapper res;
-
-        RequestParsingResult(RequestMetaDataWrapper req, ResponseMetaDataWrapper res) {
-            this.req = req;
-            this.res = res;
-        }
+    private record RequestParsingResult(RequestMetaDataWrapper req, ResponseMetaDataWrapper res) {
 
         RequestMetaDataWrapper getRequestMetaDataWrapper() {
             return this.req;
@@ -153,7 +148,7 @@ public final class PassiveModeServlet extends HttpServlet {
         }
     }
 
-    static class RequestMetaDataWrapper implements RequestMetaData, Cloneable {
+    private static class RequestMetaDataWrapper implements RequestMetaData, Cloneable {
 
         private String contentType;
 
@@ -221,13 +216,6 @@ public final class PassiveModeServlet extends HttpServlet {
             this.requestBody = requestBody;
         }
 
-        void set(HttpServletRequest req) {
-            this.setContentType(req.getContentType());
-            this.setMethod(req.getMethod().toString());
-            this.setQueryString(req.getQueryString());
-            this.setRequestURI(req.getRequestURI());
-        }
-
         void set(InputStream body) {
             String bodystr;
             try (Reader reader = new InputStreamReader(body, StandardCharsets.UTF_8)) {
@@ -237,7 +225,7 @@ public final class PassiveModeServlet extends HttpServlet {
                 while ((len = reader.read(cbuf)) > 0) {
                     sb.append(cbuf, 0, len);
                 }
-                bodystr = URLDecoder.decode(sb.toString(), "UTF-8");
+                bodystr = URLDecoder.decode(sb.toString(), StandardCharsets.UTF_8);
             } catch (IOException e) {
                 bodystr = "";
             }
@@ -273,7 +261,7 @@ public final class PassiveModeServlet extends HttpServlet {
         }
     }
 
-    static class ResponseMetaDataWrapper implements ResponseMetaData, Cloneable {
+    private static class ResponseMetaDataWrapper implements ResponseMetaData, Cloneable {
 
         private int status;
 
@@ -306,11 +294,6 @@ public final class PassiveModeServlet extends HttpServlet {
 
         void setResponseBody(Optional<InputStream> responseBody) {
             this.responseBody = responseBody;
-        }
-
-        void set(HttpServletResponse res) {
-            this.setStatus(res.getStatus());
-            this.setContentType(res.getContentType());
         }
 
         void set(InputStream body) throws IOException {
